Admin update system details

--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,10 @@
     <title>Smart Taxi</title>
   </head>
   <body>
+    <script type="text/javascript" src="cordova.js"></script>
     <div id="app"></div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!-- built files will be auto injected -->
-    <script src="cordova.js"></script>
   </body>
 </html>
 
